// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker Should disabled work 1`] = `
<div>
  <div
    class="ant-color-picker-trigger ant-color-picker-trigger-disabled"
  >
    <div
      class="ant-color-picker-color-block"
    >
      <div
        class="ant-color-picker-color-block-inner"
        style="background: rgb(22, 119, 255);"
      />
    </div>
  </div>
</div>
`;

exports[`ColorPicker Should panelRender work 1`] = `
<div>
  <div
    class="ant-color-picker-trigger ant-popover-open ant-color-picker-trigger-active"
  >
    <div
      class="ant-color-picker-color-block"
    >
      <div
        class="ant-color-picker-color-block-inner"
        style="background: rgb(22, 119, 255);"
      />
    </div>
  </div>
  <div
    class="ant-popover ant-zoom-big-appear ant-zoom-big-appear-prepare ant-zoom-big ant-color-picker ant-popover-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-popover-arrow"
      style="position: absolute;"
    />
    <div
      class="ant-popover-content"
    >
      <div
        class="ant-popover-inner"
        role="tooltip"
      >
        <div
          class="ant-popover-inner-content"
        >
          <div
            class="ant-color-picker-inner-content"
          >
            <div
              class="custom-panel"
            >
              <div
                class="ant-color-picker-panel"
              >
                <div
                  class="ant-color-picker-select"
                >
                  <div
                    class="ant-color-picker-palette"
                    style="position: relative;"
                  >
                    <div
                      style="position: absolute; left: 41.372549019607845px; top: -50px; z-index: 1;"
                    >
                      <div
                        class="ant-color-picker-handler"
                        style="background-color: rgb(22, 119, 255);"
                      />
                    </div>
                    <div
                      class="ant-color-picker-saturation"
                      style="background-color: rgb(0, 0, 0);"
                    />
                  </div>
                </div>
                <div
                  class="ant-color-picker-slider-container"
                >
                  <div
                    class="ant-color-picker-slider-group"
                  >
                    <div
                      class="ant-color-picker-slider ant-color-picker-slider-hue"
                    >
                      <div
                        class="ant-color-picker-palette"
                        style="position: relative;"
                      >
                        <div
                          style="position: absolute; left: 9.728183118741065px; top: -16.666666666666668px; z-index: 1;"
                        >
                          <div
                            class="ant-color-picker-handler ant-color-picker-handler-sm"
                            style="background-color: rgb(0, 0, 0);"
                          />
                        </div>
                        <div
                          class="ant-color-picker-gradient"
                          style="position: absolute; inset: 0;"
                        />
                      </div>
                    </div>
                    <div
                      class="ant-color-picker-slider ant-color-picker-slider-alpha"
                    >
                      <div
                        class="ant-color-picker-palette"
                        style="position: relative;"
                      >
                        <div
                          style="position: absolute; left: 50px; top: -16.666666666666668px; z-index: 1;"
                        >
                          <div
                            class="ant-color-picker-handler ant-color-picker-handler-sm"
                            style="background-color: rgb(22, 119, 255);"
                          />
                        </div>
                        <div
                          class="ant-color-picker-gradient"
                          style="position: absolute; inset: 0;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-color-picker-color-block"
                  >
                    <div
                      class="ant-color-picker-color-block-inner"
                      style="background: rgb(22, 119, 255);"
                    />
                  </div>
                </div>
              </div>
              <div
                class="ant-color-picker-input-container"
              >
                <div
                  class="ant-select ant-select-sm ant-select-borderless ant-color-picker-format-select ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="HEX"
                    >
                      HEX
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-color-picker-input"
                >
                  <span
                    class="ant-input-affix-wrapper ant-color-picker-hex-input ant-input-affix-wrapper-sm"
                  >
                    <span
                      class="ant-input-prefix"
                    >
                      #
                    </span>
                    <input
                      class="ant-input ant-input-sm"
                      type="text"
                      value="1677ff"
                    />
                  </span>
                </div>
                <div
                  class="ant-input-number ant-input-number-sm ant-color-picker-steppers ant-color-picker-alpha-input"
                >
                  <div
                    class="ant-input-number-handler-wrap"
                  >
                    <span
                      aria-disabled="true"
                      aria-label="Increase Value"
                      class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        aria-label="up"
                        class="anticon anticon-up ant-input-number-handler-up-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="up"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-disabled="false"
                      aria-label="Decrease Value"
                      class="ant-input-number-handler ant-input-number-handler-down"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-input-number-handler-down-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-input-number-input-wrap"
                  >
                    <input
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      autocomplete="off"
                      class="ant-input-number-input"
                      role="spinbutton"
                      step="1"
                      value="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker Should panelRender work 2`] = `
<div>
  <div
    class="ant-color-picker-trigger ant-popover-open ant-color-picker-trigger-active"
  >
    <div
      class="ant-color-picker-color-block"
    >
      <div
        class="ant-color-picker-color-block-inner"
        style="background: rgb(22, 119, 255);"
      />
    </div>
  </div>
  <div
    class="ant-popover ant-zoom-big-appear ant-zoom-big-appear-prepare ant-zoom-big ant-color-picker ant-popover-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-popover-arrow"
      style="position: absolute;"
    />
    <div
      class="ant-popover-content"
    >
      <div
        class="ant-popover-inner"
        role="tooltip"
      >
        <div
          class="ant-popover-inner-content"
        >
          <div
            class="ant-color-picker-inner-content"
          >
            <div
              class="custom-panel"
            >
              <div
                class="ant-color-picker-panel"
              >
                <div
                  class="ant-color-picker-select"
                >
                  <div
                    class="ant-color-picker-palette"
                    style="position: relative;"
                  >
                    <div
                      style="position: absolute; left: 41.372549019607845px; top: -50px; z-index: 1;"
                    >
                      <div
                        class="ant-color-picker-handler"
                        style="background-color: rgb(22, 119, 255);"
                      />
                    </div>
                    <div
                      class="ant-color-picker-saturation"
                      style="background-color: rgb(0, 0, 0);"
                    />
                  </div>
                </div>
                <div
                  class="ant-color-picker-slider-container"
                >
                  <div
                    class="ant-color-picker-slider-group"
                  >
                    <div
                      class="ant-color-picker-slider ant-color-picker-slider-hue"
                    >
                      <div
                        class="ant-color-picker-palette"
                        style="position: relative;"
                      >
                        <div
                          style="position: absolute; left: 9.728183118741065px; top: -16.666666666666668px; z-index: 1;"
                        >
                          <div
                            class="ant-color-picker-handler ant-color-picker-handler-sm"
                            style="background-color: rgb(0, 0, 0);"
                          />
                        </div>
                        <div
                          class="ant-color-picker-gradient"
                          style="position: absolute; inset: 0;"
                        />
                      </div>
                    </div>
                    <div
                      class="ant-color-picker-slider ant-color-picker-slider-alpha"
                    >
                      <div
                        class="ant-color-picker-palette"
                        style="position: relative;"
                      >
                        <div
                          style="position: absolute; left: 50px; top: -16.666666666666668px; z-index: 1;"
                        >
                          <div
                            class="ant-color-picker-handler ant-color-picker-handler-sm"
                            style="background-color: rgb(22, 119, 255);"
                          />
                        </div>
                        <div
                          class="ant-color-picker-gradient"
                          style="position: absolute; inset: 0;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-color-picker-color-block"
                  >
                    <div
                      class="ant-color-picker-color-block-inner"
                      style="background: rgb(22, 119, 255);"
                    />
                  </div>
                </div>
              </div>
              <div
                class="ant-color-picker-input-container"
              >
                <div
                  class="ant-select ant-select-sm ant-select-borderless ant-color-picker-format-select ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="HEX"
                    >
                      HEX
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-color-picker-input"
                >
                  <span
                    class="ant-input-affix-wrapper ant-color-picker-hex-input ant-input-affix-wrapper-sm"
                  >
                    <span
                      class="ant-input-prefix"
                    >
                      #
                    </span>
                    <input
                      class="ant-input ant-input-sm"
                      type="text"
                      value="1677ff"
                    />
                  </span>
                </div>
                <div
                  class="ant-input-number ant-input-number-sm ant-color-picker-steppers ant-color-picker-alpha-input"
                >
                  <div
                    class="ant-input-number-handler-wrap"
                  >
                    <span
                      aria-disabled="true"
                      aria-label="Increase Value"
                      class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        aria-label="up"
                        class="anticon anticon-up ant-input-number-handler-up-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="up"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-disabled="false"
                      aria-label="Decrease Value"
                      class="ant-input-number-handler ant-input-number-handler-down"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-input-number-handler-down-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-input-number-input-wrap"
                  >
                    <input
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      autocomplete="off"
                      class="ant-input-number-input"
                      role="spinbutton"
                      step="1"
                      value="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker Should render trigger work 1`] = `
<div>
  <div
    class="trigger"
  />
</div>
`;

exports[`ColorPicker rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-color-picker-trigger ant-color-picker-rtl"
>
  <div
    class="ant-color-picker-color-block"
  >
    <div
      class="ant-color-picker-color-block-inner"
      style="background: rgb(22, 119, 255);"
    />
  </div>
</div>
`;
